--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,31 @@
   "installCommand": "cd frontend && npm install",
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/build",
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.9",
+      "includeFiles": [
+        "api/**",
+        "backend/**"
+      ],
+      "excludeFiles": [
+        "frontend/**",
+        "*.md",
+        ".git/**",
+        ".gitignore",
+        "docker-compose.yml",
+        "render.yaml",
+        "deploy*.ps1",
+        "backend/init.sql",
+        "**/__pycache__/**",
+        "**/*.pyc",
+        "**/.pytest_cache/**",
+        "**/tests/**",
+        "**/*.log",
+        "requirements.txt"
+      ]
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
